--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "@apollo/client": "^3.12.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
+    "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "18",
     "react-dom": "18",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
